# shortcuter

./: Cargo.toml  README.md  shortcut.json
.devcontainer/: devcontainer.json
loader/: Cargo.toml
loader/src/: add_api.rs  config_rs.rs  lib.rs
main/: Cargo.toml
main/src/: lua_loader.rs  main.rs
src/: json_loader.rs  main.rs
wrappers/: wrapper.c
